//
//  FeedView.swift
//  WorldOfPAYBACK
//
//  Created by Hasan Parves on 05.02.24.
//

import SwiftUI

struct FeedView: View {
    var body: some View {
        Text("Feed Page")
            .navigationTitle("Feed")
    }
}

