...
                    isMenuHidden.toggle()
                }
            }) {
                Image(systemName: "line.horizontal.3")
                    .imageScale(.large)
            }
                .accessibility(identifier: "side_menu_button")
            )
        }
    }
}

struct TransactionView: View {
...
